tests/sema/bad/08_map_unknown_fn.sg
parallel map foo [1,2,3];
